# CS4248_PROJ

./: .gitignore  README.md  ablation_results.csv  colab.ipynb  main.py  nb_model.pkl  pyproject.toml  requirements.txt
data/splits/: elon_tweets.csv  test.csv
datasets/: annotated_elon_tweets.csv  annotated_elon_tweets_manoj.csv
datasets/augmented_dataset/: test_augmented.csv
datasets/processed/: training_data.csv
datasets/test/: aggregated_elon_tweets.csv  llm_elon_tweets.csv
model_predictions/: bilstm-attention.csv  bilstm.csv  cardiff_roberta.csv  finetuned_roberta.csv  gemma_4-31B.csv  logistic_regression.csv  naive_bayes.csv  roberta.csv  weighted-naive-bayes-lr.csv  weighted_nb_lr.csv
notebooks/: bilstm_attention_visualization_colab.ipynb  cardiff_nlp_benchmark.ipynb  lstm.ipynb  lstm.py  lstm_attention_colab.ipynb  lstm_colab.ipynb
notebooks/experiments/: LSTM_ATTENTION_EXPERIMENTS.md  LSTM_EXPERIMENTS.md
results/divergence/: disagreements_bilstm-attention_vs_bilstm.csv  disagreements_bilstm-attention_vs_cardiff_roberta.csv  disagreements_bilstm-attention_vs_finetuned_roberta.csv  disagreements_bilstm-attention_vs_gemma_4-31B.csv  disagreements_bilstm-attention_vs_logistic_regression.csv  disagreements_bilstm-attention_vs_naive_bayes.csv  disagreements_bilstm-attention_vs_weighted-naive-bayes-lr.csv  report.md  (+21 more)
scripts/: common.py  divergence_analysis.py  feature_extraction.py  fix_predictions.py  llm_annotator.py  naive_bayes_model.py  predict_nb.py  predict_roberta.py  prepare_splits.py  preprocess.py  preprocess_augmented.py  train.py
(+10 files in other folders)
